--- a/godtools/Views/GTHomeViewCell.xib
+++ b/godtools/Views/GTHomeViewCell.xib
@@ -8,17 +8,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GTHomeViewCell" id="IOb-6t-RhA" customClass="GTHomeViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GTHomeViewCell" rowHeight="115" id="IOb-6t-RhA" customClass="GTHomeViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IOb-6t-RhA" id="xhQ-1F-7kA">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
-                        <rect key="frame" x="53" y="4" width="257" height="35"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="257" id="aO5-Ol-cth"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
+                        <rect key="frame" x="57" y="7" width="207" height="35"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                         <color key="textColor" red="0.25490196078431371" green="0.25490196078431371" blue="0.25490196078431371" alpha="0.65000000000000002" colorSpace="deviceRGB"/>
                         <nil key="highlightedColor"/>
@@ -38,17 +35,51 @@
                             </mask>
                         </variation>
                     </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PjV-YV-I0C">
+                        <rect key="frame" x="283" y="17" width="27" height="19.5"/>
+                        <state key="normal" image="GT4_HomeScreen_DraftGripC_">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="showTranslatorOptionsButtonPressed:" destination="IOb-6t-RhA" eventType="touchUpInside" id="RZD-6Z-7fq"/>
+                        </connections>
+                    </button>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gdm-PF-AH9">
+                        <rect key="frame" x="191" y="50" width="141" height="77"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hfd-Sn-7v8">
+                                <rect key="frame" x="86" y="22" width="24" height="28"/>
+                                <state key="normal" image="GT4_HomeScreen_DeleteDraftIcon_">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GT4_HomeScreen_DraftPopover_IconsOnly" translatesAutoresizingMaskIntoConstraints="NO" id="MEO-rK-c5o">
+                                <rect key="frame" x="21" y="4" width="100" height="53"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rBa-59-nqG">
+                                <rect key="frame" x="32" y="22" width="27" height="27"/>
+                                <state key="normal" image="GT4_HomeScreen_PublishDraftIcon_">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </view>
                 </subviews>
-                <constraints>
-                    <constraint firstAttribute="centerY" secondItem="UeF-AY-tJc" secondAttribute="centerY" constant="-1" id="Dav-iP-mGK"/>
-                    <constraint firstItem="UeF-AY-tJc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="19" id="f8f-Zm-7Qy"/>
-                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="icon" destination="poS-Zh-dm8" id="8fp-IB-cxk"/>
+                <outlet property="publishDeleteOptionsView" destination="gdm-PF-AH9" id="EFw-zf-Mz6"/>
+                <outlet property="showTranslatorOptionsButton" destination="PjV-YV-I0C" id="Mkp-0C-RBk"/>
                 <outlet property="titleLabel" destination="UeF-AY-tJc" id="CBd-os-ZfH"/>
             </connections>
-            <point key="canvasLocation" x="411" y="189"/>
+            <point key="canvasLocation" x="356" y="224.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="GT4_HomeScreen_DeleteDraftIcon_" width="16" height="23"/>
+        <image name="GT4_HomeScreen_DraftGripC_" width="27" height="7"/>
+        <image name="GT4_HomeScreen_DraftPopover_IconsOnly" width="156" height="60"/>
+        <image name="GT4_HomeScreen_PublishDraftIcon_" width="20" height="23"/>
+    </resources>
 </document>
