--- a/godtools/Views/GTHomeViewCell.xib
+++ b/godtools/Views/GTHomeViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -68,9 +68,28 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DED-aJ-94p">
+                        <rect key="frame" x="191" y="50" width="141" height="77"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GT4_HomeScreen_DraftPopover_IconsOnly" translatesAutoresizingMaskIntoConstraints="NO" id="bCQ-dj-iNf">
+                                <rect key="frame" x="21" y="4" width="100" height="53"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oDw-t5-ZQ2">
+                                <rect key="frame" x="62" y="24" width="21" height="23"/>
+                                <state key="normal" image="GT4_HomeScreen_CreateDraftIcon_">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="createDraftButtonPressed:" destination="IOb-6t-RhA" eventType="touchUpInside" id="o4f-NK-sPx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </view>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="createOptionsView" destination="DED-aJ-94p" id="t3Q-t7-2Lg"/>
                 <outlet property="icon" destination="poS-Zh-dm8" id="8fp-IB-cxk"/>
                 <outlet property="publishDeleteOptionsView" destination="gdm-PF-AH9" id="EFw-zf-Mz6"/>
                 <outlet property="showTranslatorOptionsButton" destination="PjV-YV-I0C" id="Mkp-0C-RBk"/>
@@ -80,6 +99,7 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="GT4_HomeScreen_CreateDraftIcon_" width="21" height="23"/>
         <image name="GT4_HomeScreen_DeleteDraftIcon_" width="16" height="23"/>
         <image name="GT4_HomeScreen_DraftGripC_" width="27" height="7"/>
         <image name="GT4_HomeScreen_DraftPopover_IconsOnly" width="156" height="60"/>
